style.css
/* ... */
article, aside, canvas, figure, figure img, figcaption, hgroup, footer, header, nav, section, audio, video {
  display: block;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

::-moz-focus-inner {
  border: none;
  padding: 0;
}

img {
  color: transparent;
  font-size: 0;
  vertical-align: middle;
  -ms-interpolation-mode: bicubic;
}

/* Font Smoothing 

body, button, input, textarea {
   -webkit-font-smoothing: subpixel-antialiased; 
  -webkit-font-smoothing: antialiased;
}*/

.clear {
  clear: both;
  display: block;
  overflow: hidden;
  visibility: hidden;
  width: 0;
  height: 0;
}

.clearfix:before, .clearfix:after {
  content: "";
  display: table;
}

.clearfix:after {
  clear: both
}

.clearfix {
  zoom: 1
}

/*reset ends*/

body
{
min-width: 960px;
height: 100%;
width:expression(document.body.clientWidth < 960? "960px": "auto" );
	padding:0px;
	margin:0 auto;
	font-size:15px;
	font-family: "Helvetica Neue", Arial, "DejaVu Sans", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
	background-color:#5e5e5e;
	background-image:url(images/background_pattern.png);
}

p {margin:0;padding:0;}

#container{margin:0 auto;width:960px;padding-left:40px;padding-right:40px;border-width:0px solid #dcdcdc;min-height: 100%;}
#container-copy {margin:0 auto;width:960px;padding-left:40px;padding-right:40px;border-width:0px solid #dcdcdc;}

/* Header elements styles
----------------------------------------------------------------------------------------------------*/

#logo{background:url(images/logo.png) no-repeat center;height:76px;margin-top:17px;margin-bottom:0px;text-align:center;}
.shadow{background: url(images/shadow_header.png) no-repeat center;height: 43px;text-align: center;margin-top: -30px;}
#search	{
	text-align: center;
	margin-top: 12px;
}

.topsearch_input	{
	color:#b9b9b9;
	width:140px;
	height: 30px;
	font-size:15px;
	border: 0px solid #999;
	-webkit-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
	-moz-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
	box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
	padding-left:10px;
	vertical-align: middle;
	behavior: url(PIE.htc);
}

.topsearch_img	{
	margin:0 0 0 -30px;
	vertical-align: middle;
}

input.topsearch_input:focus	{
	width:290px;
	outline-width: 0px;
	-webkit-transition: width 0.1s ease;  
    -moz-transition: width 0.1s ease;  
    -o-transition: width .1s ease;  
    -ms-transition: width .1s ease;  
    transition: width .1s ease;
    behavior: url(PIE.htc);  
}

#nav	{
	margin-top:30px;
	margin-bottom:25px;
}

#nav a {color:#000;text-decoration: none;}
#nav ul {list-style: none;}
#nav .nav-header {
	padding: 8px 10px;
	border-top:1px dashed #B9B9B9;
	border-left:1px dashed #B9B9B9;
	border-right:1px dashed #B9B9B9;
	/*height: 30px;*/
	background-color:rgba(95,60,0,0.05);
	margin:0px;
}

#nav .last {border-bottom:1px dashed #B9B9B9;margin-bottom: 20px;}
#nav .nave-box	{height:100%;}
#nav .nav-box a {font-size:14px;color:#b42800;line-height: 25px;}
#nav .nav-box ul {padding:4px 0px;margin: 0px;}
#nav .nav-box ul li {line-height: 28px;margin:0px;}
#nav .nav-box ul li a {font-size:14px;color:#222;line-height: 25px;}
#nav .more {margin-bottom:20px;}
#nav .more a {color:#B9B9B9;font-size:13px;float: right;}
#nav .nav-collapse-content {
	padding: 8px 10px;
	display: none;
	border-top:1px dashed #B9B9B9;
	border-left:1px dashed #B9B9B9;
	border-right:1px dashed #B9B9B9;
}
#nav .continent ul {margin-left:0px;margin-bottom:55px;list-style: disc;}
#nav .continent ul li {width: 90px;float: left;}

#nav .topic ul {margin-left:0px;margin-bottom:55px;list-style: disc;}
#nav .topic ul li {width: 90px;float: left;}



.collapse-nav	{cursor:pointer;float:right;padding:8px 0px;display: none;}
.expand-nav	{cursor:pointer;float:right;padding:8px 0px;}

#slidecontent{display: none;}
.when-hidden	{
	text-align: center;
	font-size:13px;
	color:#848484;
	cursor: pointer;
	z-index: 1;
	position: relative;
	background:url(images/when_hidden.png) no-repeat center;
	height: 41px;
	width: 90px;
	margin:0 auto;
}
.when-shown	{
	font-size:13px;
	color:#848484;
	text-align: center;
	cursor: pointer;
	display:none;
	z-index: 100;
	position: relative;
	background:url(images/when_shown.png) no-repeat center;
	height: 41px;
	width: 90px;
	margin:0 auto;

}
.when-hidden:hover	{background:url(images/when_hidden_hover.png) no-repeat center;}
.when-shown:hover	{background:url(images/when_shown_hover.png) no-repeat center;}

.shadow-header	{background:url(images/shadow_header.png) no-repeat center;display: none;z-index: 1;margin-top:1000;position: relative;height: 41px;}

/* Main styles
----------------------------------------------------------------------------------------------------*/

#column1	{margin:30px auto;}
#column1 a 	{text-decoration: none;}
#column2	{margin:30px auto;width:322px;}
#column2 a 	{text-decoration: none;}
#graphics	{padding:20px 0 20px 20px;}
#graphics a 	{text-decoration: none;}
#collections	{padding: 20px;}
#collections a 	{text-decoration: none;}


.column-head	a {color:#000;}

.article-latest	{margin-top: 30px;}
.latest-img	{margin: 0 20px 0 0;border:1px solid #777;float:left;}
.latest-text	{width:368px;float:left;margin:0;position: relative;}
.latest-head	a {font-size:18px;font-weight:700;color:#000;text-decoration: none;line-height: 25px;}
.latest-author	a {font-size:13px;color:#b42800;text-decoration: none;line-height: 25px;}
.latest-abstract	 {font-size:15px;color:#777;text-decoration: none;line-height: 25px;}
.box-abstract	{height:auto;font-size:15px;color:#777;line-height: 25px;z-index: 1000px;padding:10px;margin:0 -10px;}

.article-select	{margin-top:18px;}
.article-select-first	{margin-top:30px;}
.select-head	{margin-bottom:5px;}
.select-head	a {font-size:14px;font-weight:700;color:#b42800;text-decoration:none;line-height:24px;}
.select-abstract	 {font-size:14px;color:#777;line-height:24px;}
/* ... */

